# pico-bluetooth

./: CMakeLists.txt  README.md
include/: btstack_config.h  btutils.h  device.h  logger.h
include/sm/: setup.h
src/: btutils.cpp  device.cpp  main.cpp
src/sm/: setup.cpp
